# aio-fetcher

./: .gitignore  README.md  index.html  lzhaiofetcher.html  pyproject.toml  search.js
lzhaiofetcher/: __init__.py  fetcher.py
site/: lzhaiofetcher.html
