[project]
name = "lzhaiofetcher"
version = "1.1"
description = "将 aiohttp 的异步 get 封装了 3 个函数。包含失败重试、串行任务、并行任务、随机延迟、任务并发数控制等特性"
authors = [
    { name = "lzh", email = "zhhtdm@hotmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "aiohttp",
    "lzhgetlogger"
]

[project.urls]
Homepage = "https://github.com/zhhtdm/aio-fetcher"
Repository = "https://github.com/zhhtdm/aio-fetcher"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
